[metadata]
name = python_yaml_testing_framework
version = 0.0.1
author = Olufemi Jemilohun
author_email = olufemi.jemilohun@gmail.com
description = A YAML and data driven Python testing framework
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = app
packages = find:
python_requires = >=3.10


[options.packages.find]
where = app
